# fine-tuning

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.kiro/specs/math-lora-finetuning/: .config.kiro  design.md  requirements.md  tasks.md
configs/: qwen-0.5b-lora.yaml  qwen-7b-qlora.yaml
data/: train.jsonl  val.jsonl
docker/: Dockerfile
docs/: architecture.md  eval_results.md  runbook.md
scripts/: build_dataset.sh  evaluate.sh  train.sh
src/math_lora/: __init__.py  build_dataset.py  compare.py  config.py  eval_prompts.py  evaluate.py  logging_utils.py  report_diff.py  serve.py  train.py
src/math_lora/dataset_builder/: __init__.py  canonicalization.py  normalization.py  sources.py
src/math_lora/evaluation/: __init__.py  eval_prompts.py  extract.py  gsm8k.py
src/math_lora/evaluator/: __init__.py
src/math_lora/inference_server/: __init__.py
src/math_lora/lora_trainer/: __init__.py  validate.py
src/math_lora/model_selector/: __init__.py  selection.py  vram.py
src/math_lora/pipeline/: __init__.py
src/math_lora/planner/: __init__.py  config_loader.py  cost_reconciliation.py  projections.py  quantization_default.py  vram_sampling.py
src/math_lora/tracker/: __init__.py
src/math_lora/types/: __init__.py  errors.py  models.py  quantization.py
tests/: conftest.py
tests/integration/: test_placeholder.py  test_source_connectors_smoke.py
tests/property/: strategies.py  test_hypothesis_profile.py  test_quantization_default.py  test_strategies_smoke.py  test_vram_estimation.py
tests/unit/: test_canonicalization.py  test_config.py  test_cost_reconciliation.py  test_domain_schemas.py  test_extract.py  test_layout.py  test_lora_validate.py  test_quantization_default.py  test_selection.py  test_vram_estimation.py
