[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-lora"
version = "0.1.0"
description = "Minimal LoRA fine-tuning for mathematical reasoning."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "math-lora contributors" }]

dependencies = [
    "torch==2.4.1",
    "transformers==4.46.3",
    "peft==0.13.2",
    "accelerate==1.1.1",
    "datasets==3.1.0",
]

[project.scripts]
math-lora-train = "math_lora.train:main"
math-lora-eval = "math_lora.evaluate:main"
math-lora-compare = "math_lora.compare:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["math_lora*"]

[tool.setuptools.package-data]
"math_lora" = ["py.typed"]
