[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-lora"
version = "0.1.0"
description = "LoRA / QLoRA fine-tuning pipeline for mathematical reasoning."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "math-lora contributors" }]
keywords = ["lora", "qlora", "fine-tuning", "math", "reasoning", "llm", "peft"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch==2.4.1",
    "transformers==4.46.3",
    "peft==0.13.2",
    "accelerate==1.1.1",
    "datasets==3.1.0",
    "bitsandbytes==0.44.1; platform_system != 'Darwin'",
    "pydantic==2.9.2",
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
tracking = ["wandb==0.18.7"]
test = ["pytest==8.3.3", "pytest-cov==5.0.0"]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.7.4",
    "mypy==1.13.0",
    "wandb==0.18.7",
]

[project.scripts]
math-lora-train = "math_lora.train:main"
math-lora-eval = "math_lora.evaluate:main"
math-lora-serve = "math_lora.serve:main"
math-lora-build-dataset = "math_lora.build_dataset:main"
math-lora-report-diff = "math_lora.report_diff:main"

[project.urls]
Homepage = "https://github.com/example/math-lora"
Issues = "https://github.com/example/math-lora/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["math_lora*"]

[tool.setuptools.package-data]
"math_lora" = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "unit: pure-python unit tests (no torch / no GPU)",
    "integration: tests that require torch/transformers/GPU",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
mypy_path = "src"
packages = ["math_lora"]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
